--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
+
+#Esse arqivo funciona como um ini de configuração parara bases de dados , eu posso usar ele para apontar 
+# a porta o nome da base de dados, usuario e a senha 
+
+
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:I8KJuXivCoynUsoH/7ite53VP4OlKWzGY4ZYSAifO54=
+APP_KEY=base64:1OEGdUS3E8HQUXaDZo09DivDzkjvP6E4HuBD2pUBQj8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,14 +25,21 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
 
-SESSION_DRIVER=database
+#DB_CONNECTION=sqlite
+#DB_DATABASE=C:\xampp\htdocs\laravel_studies_04\database\laravel_sqlite_database.sqlite
+
+
+#dados do meu banco de dados
+ 
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel_mysql_database
+DB_USERNAME=root
+DB_PASSWORD=
+
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
