conexoes com bases de dados

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:1OEGdUS3E8HQUXaDZo09DivDzkjvP6E4HuBD2pUBQj8=
+APP_KEY=base64:uI9X6fe4xBtpQ2sEi6MUZiFnxUyR2Ec29mqmptQL1Sc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -38,6 +38,14 @@ DB_PORT=3306
 DB_DATABASE=laravel_mysql_database
 DB_USERNAME=root
 DB_PASSWORD=
+
+
+#DB_CONNECTION=sqlsrv
+#DB_HOST=127.0.0.1
+#DB_PORT=1433
+#DB_DATABASE=laravel_sql_server
+#DB_USERNAME=sa
+#DB_PASSWORD=
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
